test/1.2/errors/T_ENALLOW.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "simics/devs/signal.dml";
/// SCAN-FOR-TAGS ENALLOW_dml14.dml
import "ENALLOW_dml14.dml";

connect foo {
    interface signal {
        /// ERROR ENALLOW
        attribute a;
    }

    /// ERROR ENALLOW
    connect bar {
        data bool connected;
    }
}

bank b {
    register r size 4 @ undefined {
        /// ERROR ENALLOW
        group g;
        field f [31:0] {
            /// ERROR ENALLOW
            field ff [31:0];
        }
    }
}

group g {
    // no error
    port p;
    // see SIMICS-19009
    /// ERROR ENALLOW
    bank b;
}

typedef struct {
    void (*m)(conf_object_t *);
} i_interface_t;

connect c {
    group g {
        /// ERROR ENALLOW
        interface i;
    }
    // no error
    interface i;
}
port p {
    group g {
        /// ERROR ENALLOW
        implement i;
    }
    // no error
    implement i;
}
